added time series dataset file

--- a/boost_timeseries_model.ipynb
+++ b/boost_timeseries_model.ipynb
@@ -846,6 +846,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 104,
+   "id": "264a5103-d341-4588-83c6-0285a1a36e6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "boost_df.to_csv('timeseries_dataset.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 69,
    "id": "deb2917f-fa13-4639-a942-1989037769b8",
    "metadata": {},
