moved data files to data folder

--- a/boost_timeseries_model.ipynb
+++ b/boost_timeseries_model.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "boost_df = pd.read_csv('boost_df.csv')"
+    "boost_df = pd.read_csv('data/boost_df.csv')"
    ]
   },
   {
@@ -851,7 +851,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "boost_df.to_csv('timeseries_dataset.csv', index=False)"
+    "boost_df.to_csv('data/timeseries_dataset.csv', index=False)"
    ]
   },
   {
