--- a/boost_EDA.ipynb
+++ b/boost_EDA.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "boost_df = pd.read_csv('boost_df.csv')"
+    "boost_df = pd.read_csv('data/boost_df.csv')"
    ]
   },
   {
