--- a/boost_model.ipynb
+++ b/boost_model.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "boost_df = pd.read_csv('boost_df.csv')"
+    "boost_df = pd.read_csv('data/boost_df.csv')"
    ]
   },
   {
@@ -647,7 +647,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "boost_df_by_trip.to_csv('boost_model_dataset.csv', index=False)"
+    "boost_df_by_trip.to_csv('data/boost_model_dataset.csv', index=False)"
    ]
   },
   {
