--- a/boost_timeseries_model.ipynb
+++ b/boost_timeseries_model.ipynb
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "fcda5e58-e8f7-4db7-a362-c46203438554",
    "metadata": {},
    "outputs": [],
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "89acb6ca-629a-49db-944f-c7c41b752942",
    "metadata": {},
    "outputs": [],
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "6f6ed335-3ed0-4628-bb4f-449bf93e7897",
    "metadata": {},
    "outputs": [],
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "4240b5a7-3bf5-4c80-95df-5122802dca1d",
    "metadata": {},
    "outputs": [
@@ -832,7 +832,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "264a5103-d341-4588-83c6-0285a1a36e6a",
    "metadata": {},
    "outputs": [],
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "deb2917f-fa13-4639-a942-1989037769b8",
    "metadata": {},
    "outputs": [
@@ -861,7 +861,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_w/zd567b3j2b1cy6h7nmg6cnxh0000gp/T/ipykernel_87379/696817386.py:10: SettingWithCopyWarning: \n",
+      "/var/folders/_w/zd567b3j2b1cy6h7nmg6cnxh0000gp/T/ipykernel_54036/696817386.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -881,6 +881,58 @@
     "model.fit(train[features], train[target])\n",
     "\n",
     "test['predicted_proba'] = model.predict_proba(test[features])[:, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "76cf4194-f9d8-44ad-8183-51eba8629df3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test = model.predict(test[features])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9ada20c6-2516-4ae0-9bda-bc8fd575a1d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7320246292372882"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(test[target], y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6cdf3d13-c073-4234-a909-a596a0de059a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8136586334745762"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(test[\"claimed\"], y_test)"
    ]
   },
   {
